--- a/Rexplorer/Rexplorer.csproj
+++ b/Rexplorer/Rexplorer.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Classes\Program.cs" />
     <Compile Include="Classes\ReFileWatcher.cs" />
     <Compile Include="Classes\ReProcess.cs" />
+    <Compile Include="Classes\StringBind.cs" />
     <Compile Include="Forms\ConvertVideoForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +99,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="Properties\DataSources\Rexplorer.Forms.ConvertVideoForm.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
