--- a/Rexplorer/Rexplorer.csproj
+++ b/Rexplorer/Rexplorer.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Classes\Program.cs" />
     <Compile Include="Classes\ReFileWatcher.cs" />
+    <Compile Include="Classes\ReMedia.cs" />
     <Compile Include="Classes\ReProcess.cs" />
     <Compile Include="Classes\StringBind.cs" />
     <Compile Include="Forms\ConvertVideoForm.cs">
